File buffer is now abstract interface with factory method.

--- a/QGL_Content/QGL_Content.vcxproj
+++ b/QGL_Content/QGL_Content.vcxproj
@@ -197,9 +197,9 @@
     <ClInclude Include="include\Interfaces\qgl_icontent_file.h" />
     <ClInclude Include="include\Interfaces\qgl_icontent_project.h" />
     <ClInclude Include="include\Interfaces\qgl_icontent_store.h" />
+    <ClInclude Include="include\Interfaces\qgl_ifile_buffer.h" />
     <ClInclude Include="include\qgl_content_include.h" />
     <ClInclude Include="include\qgl_content_types.h" />
-    <ClInclude Include="include\qgl_file_buffer.h" />
     <ClInclude Include="include\qgl_file_handle.h" />
     <ClInclude Include="include\qgl_file_helpers.h" />
     <ClInclude Include="QGLContent.h" />
@@ -213,10 +213,10 @@
     <ClCompile Include="qgl_content_variant_entry.cpp" />
     <ClCompile Include="qgl_content_file_helpers.cpp" />
     <ClCompile Include="qgl_content_project_compiler.cpp" />
-    <ClCompile Include="qgl_file_buffer.cpp" />
     <ClCompile Include="qgl_icontent_file.cpp" />
     <ClCompile Include="qgl_icontent_project.cpp" />
     <ClCompile Include="qgl_icontent_store.cpp" />
+    <ClCompile Include="qgl_ifile_buffer.cpp" />
     <ClCompile Include="qgl_string_item.cpp" />
     <ClCompile Include="qgl_wstring_item.cpp" />
     <ClInclude Include="pch.h" />
