--- a/QGL_Graphics/QGL_Graphics.vcxproj
+++ b/QGL_Graphics/QGL_Graphics.vcxproj
@@ -190,6 +190,14 @@
     <ClInclude Include="include\Content\Content-Buffers\qgl_rasterizer_buffer.h" />
     <ClInclude Include="include\Content\Content-Buffers\qgl_sampler_buffer.h" />
     <ClInclude Include="include\Content\Content-Buffers\qgl_text_format_buffer.h" />
+    <ClInclude Include="include\Content\FIle-Loaders\qgl_brush_file_loader.h" />
+    <ClInclude Include="include\Content\FIle-Loaders\qgl_camera_file_loader.h" />
+    <ClInclude Include="include\Content\FIle-Loaders\qgl_depth_stencil_file_loader.h" />
+    <ClInclude Include="include\Content\FIle-Loaders\qgl_graphics_config_file_loader.h" />
+    <ClInclude Include="include\Content\FIle-Loaders\qgl_light_file_loader.h" />
+    <ClInclude Include="include\Content\FIle-Loaders\qgl_rasterizer_file_loader.h" />
+    <ClInclude Include="include\Content\FIle-Loaders\qgl_sampler_file_loader.h" />
+    <ClInclude Include="include\Content\FIle-Loaders\qgl_text_format_file_loader.h" />
     <ClInclude Include="include\Content\qgl_brush.h" />
     <ClInclude Include="include\Content\qgl_camera.h" />
     <ClInclude Include="include\Content\qgl_graphics_config.h" />
