--- a/QGL_Graphics/QGL_Graphics.vcxproj.filters
+++ b/QGL_Graphics/QGL_Graphics.vcxproj.filters
@@ -154,9 +154,6 @@
     <ClCompile Include="qgl_light_buffer.cpp">
       <Filter>Source Files\Content\Content-Buffers</Filter>
     </ClCompile>
-    <ClCompile Include="qgl_graphics_device.cpp">
-      <Filter>Source Files\GPU</Filter>
-    </ClCompile>
     <ClCompile Include="qgl_graphics_device_helpers.cpp">
       <Filter>Source Files\GPU</Filter>
     </ClCompile>
@@ -257,6 +254,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="qgl_brush_file_loader.cpp">
+      <Filter>Source Files\Content\File-Loaders</Filter>
+    </ClCompile>
+    <ClCompile Include="qgl_graphics_config_file_loader.cpp">
       <Filter>Source Files\Content\File-Loaders</Filter>
     </ClCompile>
   </ItemGroup>
@@ -479,6 +479,30 @@
     </ClInclude>
     <ClInclude Include="include\Content\FIle-Loaders\qgl_text_format_file_loader.h">
       <Filter>Header Files\Content\File-Loaders</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content\Content-Loaders\qgl_brush_importer.h">
+      <Filter>Header Files\Content\Content-Loaders</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content\Content-Loaders\qgl_camera_importer.h">
+      <Filter>Header Files\Content\Content-Loaders</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content\Content-Loaders\qgl_depth_stencil_importer.h">
+      <Filter>Header Files\Content\Content-Loaders</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content\Content-Loaders\qgl_graphics_config_importer.h">
+      <Filter>Header Files\Content\Content-Loaders</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content\Content-Loaders\qgl_light_importer.h">
+      <Filter>Header Files\Content\Content-Loaders</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content\Content-Loaders\qgl_rasterizer_importer.h">
+      <Filter>Header Files\Content\Content-Loaders</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content\Content-Loaders\qgl_sampler_importer.h">
+      <Filter>Header Files\Content\Content-Loaders</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content\Content-Loaders\qgl_text_format_importer.h">
+      <Filter>Header Files\Content\Content-Loaders</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
