--- a/QGL_Content/QGL_Content.vcxproj.filters
+++ b/QGL_Content/QGL_Content.vcxproj.filters
@@ -235,6 +235,12 @@
     <ClInclude Include="include\Interfaces\qgl_ifile_buffer.h">
       <Filter>Header Files\Interfaces</Filter>
     </ClInclude>
+    <ClInclude Include="include\Content-Importers\qgl_importer_bool.h">
+      <Filter>Header Files\Content-Importers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content-Importers\qgl_importer_integral.h">
+      <Filter>Header Files\Content-Importers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="QGL_Content.def">
