--- a/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj
+++ b/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj
@@ -258,6 +258,8 @@
     <ClCompile Include="Tests\Observer-Observable\subject_notify_tests.cpp" />
     <ClCompile Include="Tests\Observer-Observable\subject_out_of_scope_tests.cpp" />
     <ClCompile Include="Tests\Observer-Observable\subject_remove_tests.cpp" />
+    <ClCompile Include="Tests\qgl_version_tests.cpp" />
+    <ClCompile Include="Tests\rational_number_tests.cpp" />
     <ClCompile Include="Tests\Timing\timer_tests.cpp" />
     <ClCompile Include="Tests\Timing\time_helper_tests.cpp" />
     <ClCompile Include="Tests\Timing\time_state_tests.cpp" />
