--- a/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj.filters
+++ b/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="Tests\Timing\timer_tests.cpp">
       <Filter>Tests\Timing</Filter>
     </ClCompile>
+    <ClCompile Include="Tests\qgl_version_tests.cpp">
+      <Filter>Tests</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\rational_number_tests.cpp">
+      <Filter>Tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
