--- a/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj
+++ b/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj
@@ -252,6 +252,7 @@
     <Image Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Tests\icommand_tests.cpp" />
     <ClCompile Include="Tests\Observer-Observable\callback_observer-tests.cpp" />
     <ClCompile Include="Tests\Observer-Observable\observer_out_of_scope_tests.cpp" />
     <ClCompile Include="Tests\Observer-Observable\subject_constructor_tests.cpp" />
