--- a/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj.filters
+++ b/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="Tests\rational_number_tests.cpp">
       <Filter>Tests</Filter>
     </ClCompile>
+    <ClCompile Include="Tests\icommand_tests.cpp">
+      <Filter>Tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
